kube/namespace.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: rust-hello
  labels:
    name: rust-hello
