kube/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rust-hello-deployment
  namespace: rust-hello
  labels:
    app: rust-hello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rust-hello
  template:
    metadata:
      labels:
        app: rust-hello
    spec:
      containers:
      - name: rust-hello
        image: ##IMAGE##
        ports:
        - containerPort: 8001
