kube/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rust-hello
  namespace: rust-hello
spec:
  selector:
    app: rust-hello
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      name: web
