kube/api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rust-hello-deployment
  namespace: rust-hello
  labels:
    app: rust-hello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rust-hello
  template:
    metadata:
      labels:
        app: rust-hello
    spec:
      containers:
      - name: rust-hello
        image: ##IMAGE##
        ports:
        - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: rust-hello
  namespace: rust-hello
spec:
  selector:
    app: rust-hello
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      name: web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rust-hello-ingress
  namespace: rust-hello
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - ##HOSTNAME##
    secretName: rust-hello-tls-secret
  rules:
  - host: ##HOSTNAME##
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rust-hello
            port:
              name: web
